@@ -1,0 +1,12 @@
+## Contributions
+
+File(s) | Notes | Author
+--- | --- | ---
+[testfuzz.sh](./blob/master/contrib/testfuzz.sh) | A script to fuzz the ./testre program. | Michael Tesch, tesch1@gmail.com
+
+### testfuzz.sh
+
+This script fuzzes the ./testre program using the handy [AFL (american
+fuzzy lop)](http://lcamtuf.coredump.cx/afl/).  If AFL isn't available
+it will be downloaded and built locally.
+
